# hand_eye_calibrate

./: .gitignore  hand_eye_calibrate.py  main.py  output.txt  output_result.txt  pyproject.toml
.trae/rules/: uv.md
YZX_lib/: __init__.py  convert.py
YZX_lib/calibration/: __init__.py
YZX_lib/tests/: test_convert.py  test_euler.py  test_matrix.py  test_quaternion.py
YZX_lib/transform/: __init__.py  quaternion.py
Yzx_pose_lib/: README.md  __init__.py  constants.py  convert.py  utils.py
Yzx_pose_lib/core/: matrix.py
Yzx_pose_lib/tests/: test_convert.py
utiles/: opencv_utils.py
