[project]
name = "hand-eye-calibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "open3d>=0.19.0",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
[tool.pytest.ini_options]
testpaths = ["YZX_lib/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"